added jsonwebtoken and getUser api
